<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>narval_pid</name>
  <version>0.0.1</version>
  <description>Narval PID</description>
  <maintainer email="piotrflak@student.agh.edu.pl">Piotr Flak</maintainer>
  <license>Apache-2.0</license>

  <author>Piotr Flak</author>

  <depend>rclpy</depend>

  <build_depend>tf2_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>narval_msgs</build_depend>


  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>tf2_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>python3-transforms3d</exec_depend>


  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <exec_depend>narval_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>